--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "churchapp",
+  "name": "reactnativeui",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@gorhom/animated-tabbar": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-seoul/masonry-list": "^1.4.2",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
+    "expo": "^49.0.3",
+    "expo-font": "~11.4.0",
+    "expo-image": "~1.3.4",
+    "expo-linking": "~5.0.2",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-paper": "^5.11.3",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-svg": "13.9.0",
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-webview": "13.2.2",
+    "react-native-youtube-iframe": "^2.3.0",
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
